hphp/hack/test/typecheck/script_header_hx.php.exp
ERROR: File "script_header_hx.php", line 1, characters 3-4:
`<?hx` is not a valid script marker. Use `<?hh` to start a Hack file. (Parsing[1002])
ERROR: File "script_header_hx.php", line 4, characters 10-21:
Invalid return type (Typing[4110])
  File "script_header_hx.php", line 3, characters 35-37:
  Expected `int`
  File "script_header_hx.php", line 4, characters 10-21:
  But got `string`
