hphp/hack/test/typecheck/script_header_hx.php
<?hx

function script_header_hx_test(): int {
  return "not an int";
}
